[gd_scene load_steps=4 format=2]

[ext_resource path="res://Character/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character/Character.gd" type="Script" id=3]

[node name="Character" type="Node2D"]
scale = Vector2( 0.95, 0.95 )
script = ExtResource( 3 )

[node name="cartoon_bubble" type="Node2D" parent="."]

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 802.504, 378.798 )
scale = Vector2( 0.9, 0.9 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 100, 385.799 )
scale = Vector2( 0.9, 0.9 )

[node name="Player_pos" type="Position2D" parent="."]
position = Vector2( 280.545, 385.303 )

[node name="Enemy_pos" type="Position2D" parent="."]
position = Vector2( 630.036, 373.79 )

[node name="Walk_up_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Bubble_pos" type="Position2D" parent="."]
position = Vector2( 440.201, 217.813 )

[connection signal="check_pos_en" from="Enemy" to="." method="_on_Enemy_check_pos_en"]
[connection signal="check_pos" from="Player" to="." method="_on_Player_check_pos"]
[connection signal="speech_bubble" from="Player" to="." method="_on_Player_speech_bubble"]
[connection signal="timeout" from="Walk_up_Timer" to="." method="_on_Walk_up_Timer_timeout"]
